[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/PlayerScript.gd" type="Script" id=1]
[ext_resource path="res://scenes/PauseScene.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/GameOverScene.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/TypewriterDialogScene.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/font_48.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/visual/ui/cross/spr_ui_cross.png" type="Texture" id=6]
[ext_resource path="res://assets/visual/ui/health/ase_health_indicator_severe.png" type="Texture" id=7]
[ext_resource path="res://assets/visual/ui/weapons/ase_weapons_crowbar.png" type="Texture" id=8]

[sub_resource type="Animation" id=2]
resource_name = "Head Bob"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0.05, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "Jump Land"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -0.05, 0 ), Vector3( 0, 0.05, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer:root_node")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ NodePath("..") ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="CapsuleShape" id=1]
radius = 0.4

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.341176, 0.341176, 0.341176, 0.4 )
expand_margin_left = 8.0
expand_margin_right = 8.0

[node name="Player" type="KinematicBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
script = ExtResource( 1 )

[node name="PlayerHead" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0 )

[node name="PlayerCamera" type="Camera" parent="PlayerHead"]
fov = 90.0
far = 500.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="PlayerHead/PlayerCamera"]
"anims/Head Bob" = SubResource( 2 )
"anims/Jump Land" = SubResource( 4 )
anims/RESET = SubResource( 3 )

[node name="PlayerWeapon" type="Sprite3D" parent="PlayerHead/PlayerCamera"]
transform = Transform( 0.528586, -0.108784, -0.84188, 0.377846, 0.918243, 0.118585, 0.760151, -0.380783, 0.526474, 0.296194, -0.0170523, -0.303657 )
texture = ExtResource( 8 )

[node name="RayCast" type="RayCast" parent="PlayerHead"]
enabled = true
cast_to = Vector3( 0, 0, -3 )
collide_with_areas = true

[node name="CollisionBodyCapsule" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="UI" type="Node" parent="."]

[node name="Pause" type="Node" parent="UI"]

[node name="PauseScene" parent="UI/Pause" instance=ExtResource( 2 )]
visible = false

[node name="GameEnd" type="Node" parent="UI"]

[node name="GameOverScene" parent="UI/GameEnd" instance=ExtResource( 3 )]
visible = false

[node name="PlayerUI" type="Node2D" parent="UI"]

[node name="HealthIndicator" type="Node2D" parent="UI/PlayerUI"]

[node name="HealthIndicatorSprite" type="Sprite" parent="UI/PlayerUI/HealthIndicator"]
position = Vector2( 170, 368 )
texture = ExtResource( 7 )
centered = false
offset = Vector2( -170, -368 )

[node name="HealthIndicatorSpriteTwo" type="Sprite" parent="UI/PlayerUI/HealthIndicator"]
position = Vector2( 1196, 400 )
rotation = 3.14159
texture = ExtResource( 7 )
centered = false
offset = Vector2( -170, -368 )

[node name="TypewriterDialog" parent="UI/PlayerUI" instance=ExtResource( 4 )]

[node name="PlayerTaskLabel" type="Label" parent="UI/PlayerUI"]
margin_left = 32.0
margin_top = 32.0
margin_right = 110.0
margin_bottom = 96.0
custom_fonts/font = ExtResource( 5 )
custom_styles/normal = SubResource( 5 )
text = "Task."
valign = 1

[node name="PlayerPromptLabel" type="Label" parent="UI/PlayerUI"]
margin_left = 683.0
margin_top = 384.0
margin_right = 708.0
margin_bottom = 448.0
custom_fonts/font = ExtResource( 5 )
custom_styles/normal = SubResource( 5 )
valign = 1

[node name="CrossSprite" type="Sprite" parent="UI/PlayerUI"]
position = Vector2( 683, 384 )
texture = ExtResource( 6 )
